syntax = "proto3";

package resources.livemap;

import "resources/centrum/units.proto";
import "resources/jobs/colleagues.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/livemap;livemap";

enum MarkerType {
  MARKER_TYPE_UNSPECIFIED = 0;
  MARKER_TYPE_DOT = 1;
  MARKER_TYPE_CIRCLE = 2;
  MARKER_TYPE_ICON = 3;
}

message MarkerInfo {
  uint64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  string job = 4;
  string job_label = 12;
  // @sanitize
  string name = 5 [(validate.rules).string = {
    min_len: 1,
    max_len: 255,
  }];
  // @sanitize
  optional string description = 6;
  double x = 7;
  double y = 8;
  // @sanitize
  optional string postal = 9  [(validate.rules).string.max_len = 48];
  // @sanitize: method=StripTags
  optional string color = 10  [(validate.rules).string = {
    len: 7,
    pattern: "^#[A-Fa-f0-9]{6}$",
  }];
  // @sanitize: method=StripTags
  optional string icon = 11 [(validate.rules).string.max_len = 128];
}

message UserMarker {
  MarkerInfo info = 1;

  int32 user_id = 2 [(validate.rules).int32.gt = 0];
  resources.jobs.Colleague user = 3; // @gotags: alias:"user"
  optional uint64 unit_id = 4;
  optional resources.centrum.Unit unit = 5;

  bool hidden = 6;
}

message MarkerMarker {
  MarkerInfo info = 1;
  MarkerType type = 2; // @gotags: alias:"markerType"
  optional resources.timestamp.Timestamp expires_at = 3;
  MarkerData data = 4; // @gotags: alias:"markerData"
  optional int32 creator_id = 5 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort creator = 6;
}

// @dbscanner
message MarkerData {
  oneof data {
    option (validate.required) = true;

    CircleMarker circle = 3;
    IconMarker icon = 4;
  }
}

message CircleMarker {
  int32 radius = 1;
  optional float opacity = 2;
}

message Coords {
  double x = 1;
  double y = 2;
}

message IconMarker {
  // @sanitize: method=StripTags
  string icon = 1 [(validate.rules).string.max_len = 128];
}
